--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Yanxi Du"
-description              : "What I can not created, I don't understand"
+description              : "Undergraduate student at Southeast University. Special Auditor at Osaka University"
 repository               : "duyanxi/duyanxi.github.io"
 google_scholar_stats_use_cdn : true
 
