--- a/_config.yml
+++ b/_config.yml
@@ -58,7 +58,7 @@ author:
   xing             :
   youtube          :
   wikipedia        :
-
+  zhihu            :"https://www.zhihu.com/people/du-yan-xi-37"
 
 # Reading Files
 include:
