--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 
 # Site Author
 author:
-  name             : "Yanxi Du"
+  name             : "Yanxi Du 杜炎锡"
   avatar           : "images/android-chrome-512x512.png"
   bio              : "Southeast University"
   location         : "Nanjing, China"
