--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,6 +9,9 @@ main:
   - title: "Publications"
     url: "/#-publications"
 
+  - title: "Research"
+    url: "/#-research"
+
   - title: "Honors and Awards"
     url: "/#-honors-and-awards"
 
