--- a/_config.yml
+++ b/_config.yml
@@ -52,7 +52,7 @@ author:
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : du_yanx
+  twitter          : 
   vine             :
   weibo            :
   xing             :
