--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 author:
   name             : "Yanxi Du 杜炎锡"
   avatar           : "images/android-chrome-512x512.png"
-  bio              : "The Chinese University of Honk Kong, Shenzhen"
+  bio              : "The Chinese University of Hong Kong, Shenzhen"
   location         : "Shenzhen, China"
   employer         :
   pubmed           : 
