--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 # Site Settings
 title                    : "Yanxi Du
 杜炎锡"
-description              : 
+description              : "MPhil student at CUHK-Shenzhen"
 repository               : "duyanxi/duyanxi.github.io"
 google_scholar_stats_use_cdn : true
 
